Force scroll bar to prevent content shift

--- a/landing/src/components/styles/global.css
+++ b/landing/src/components/styles/global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap");
 /* @import url("https://fonts.googleapis.com/css?family=Arimo&display=swap"); */
 
 html,
@@ -19,6 +20,7 @@ body {
 
 html {
   font-size: 12px;
+  overflow-y: scroll;
 }
 
 #root {
